OO-3700: update lucence to version 7.5.0 (need reindexing)